--- a/docs/node/docs/pages/getting-started.mdx
+++ b/docs/node/docs/pages/getting-started.mdx
@@ -270,7 +270,7 @@ const account = await getAccountHandler(node)({
 
 ## Using with Ethers
 
-Tevm is an EIP-1193 provider and works with any library that follows the same standared including `ethers`, `thirdweb`, `ponder` and many others. 
+Tevm is an EIP-1193 provider and works with any library that follows the same standard including `ethers`, `thirdweb`, `ponder` and many others. 
 Though it is primarily built for `viem` it stays provider agnostic.
 
 ```ts [ethers-quickstart.mts]
