--- a/docs/node/docs/pages/getting-started.mdx
+++ b/docs/node/docs/pages/getting-started.mdx
@@ -391,7 +391,7 @@ await vm.evm.runCall({
 })
 ```
 
-This is the way we [call the EVM](http://localhost:5173/reference/evm#running-evm-calls), which activates the event handler registered earlier.
+This is the way we [call the EVM](/reference/evm#running-evm-calls), which activates the event handler registered earlier.
 This call modifies the state, so you can see the updated greeting.
 
 :::
