--- a/docs/node/docs/pages/index.mdx
+++ b/docs/node/docs/pages/index.mdx
@@ -10,7 +10,7 @@ import { HomePage } from 'vocs/components'
   <HomePage.InstallPackage name="tevm" type="install" />
   <HomePage.Description>An in browser ethereum node for JavaScript</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
+    <HomePage.Button href="/getting-started/overview" variant="accent">Get started</HomePage.Button>
     <HomePage.Button href="/examples/viem">Viem Guide</HomePage.Button>
     <HomePage.Button href="/reference">Package Reference</HomePage.Button>
   </HomePage.Buttons>
