--- a/docs/node/docs/pages/getting-started/viem.mdx
+++ b/docs/node/docs/pages/getting-started/viem.mdx
@@ -210,7 +210,7 @@ So after we use [`<client>.sendTransaction`](https://viem.sh/docs/actions/wallet
 
 :::
 
-You can also use the tree-shakeable API. See [`viem` tevm docs](./examples/viem.mdx)
+You can also use the tree-shakeable API. See [`viem` tevm docs](../examples/viem.mdx)
 
 ## Tevm actions
 
@@ -218,7 +218,7 @@ You can also use the tree-shakeable API. See [`viem` tevm docs](./examples/viem.
 
 ## TevmNode
 
-In most cases, you can use a standard API, either [`viem`](./examples/viem.mdx) API or [ethers](./examples/ethers.mdx), to control `tevm`.
+In most cases, you can use a standard API, such as `viem`, to control `tevm`.
 These APIs let you communicate as you would with a real Ethernet node.
 
 But if you need to access the node's internals, for example the EVM (Ethereum virtual machine), that is also available. The lower level API is available in the [`TevmNode`](https://github.com/evmts/tevm-monorepo/blob/main/packages/node/src/TevmNode.ts) object.
