--- a/docs/node/docs/pages/getting-started/overview.mdx
+++ b/docs/node/docs/pages/getting-started/overview.mdx
@@ -11,9 +11,9 @@ Tevm Node is an Ethereum Node that runs in all JavaScript environments.
 It's like [hardhat](https://hardhat.org/) or [anvil](https://book.getfoundry.sh/anvil/), but provides these advantages:
 
 - Zero native dependencies (runs in browser)
-- Connects directly to [Viem](https://viem.sh/) or [Ethers](https://docs.ethers.org/v6/)
+- Connects directly to [`viem`](https://viem.sh/) or [`ethers`](https://docs.ethers.org/v6/)
 - Provides lower level control over the ethereum node
 
-If you know how to use viem or ethers, you [already know how to use Tevm Node](./examples/ethers.mdx) and can get started right away.
+If you know how to use `viem` or `ethers`, you already know how to use Tevm Node and can get started right away.
 
-If you don't know how to use viem or ethers, don't worry, Tevm is a great way to learn Ethereum and TypeScript.
+If you don't know how to use `viem` or `ethers`, don't worry, Tevm is a great way to learn both Ethereum and TypeScript.
