Added tevm actions (just a link)

--- a/docs/node/docs/pages/getting-started/viem.mdx
+++ b/docs/node/docs/pages/getting-started/viem.mdx
@@ -214,7 +214,10 @@ You can also use the tree-shakeable API. See [`viem` tevm docs](../examples/viem
 
 ## Tevm actions
 
-**put something here**
+Some `tevm` actions are available directly in the client.
+They are [tree-shakable](https://developer.mozilla.org/en-US/docs/Glossary/Tree_shaking), which makes them more efficient when writing code to run in a web browser.
+
+[See here for more information](/reference/memory-client#tevm-actions).
 
 ## TevmNode
 
