Apply suggestions from code review
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/docs/node/docs/pages/getting-started/viem.mdx
+++ b/docs/node/docs/pages/getting-started/viem.mdx
@@ -359,7 +359,7 @@ Here we output the interesting fields.
 
 ```ts
   } catch (err) {
-    console.err(err)
+    console.error(err)
   }
 
   next?.()
