--- a/docs/node/docs/pages/getting-started/viem.mdx
+++ b/docs/node/docs/pages/getting-started/viem.mdx
@@ -3,8 +3,6 @@ title: Getting Started with Viem
 description: Get started with Tevm node using viem
 ---
 
-import { Callout } from 'vocs/components'
-
 # Getting Started with Viem
 
 ## Installation
@@ -224,7 +222,7 @@ They are [tree-shakable](https://developer.mozilla.org/en-US/docs/Glossary/Tree_
 ## TevmNode
 
 In most cases, you can use a standard API, such as `viem`, to control `tevm`.
-These APIs let you communicate as you would with a real Ethernet node.
+These APIs let you communicate as you would with a real Ethereum node.
 
 But if you need to access the node's internals, for example the EVM (Ethereum virtual machine), that is also available. The lower level API is available in the [`TevmNode`](https://github.com/evmts/tevm-monorepo/blob/main/packages/node/src/TevmNode.ts) object.
 
