--- a/docs/node/docs/pages/reference/trie.mdx
+++ b/docs/node/docs/pages/reference/trie.mdx
@@ -13,5 +13,5 @@ This documentation is generated from the source code. View the full API document
 
 ## Return to Documentation
 
-- [Back to Getting Started](/getting-started)
+- [Back to Getting Started](/getting-started/overview)
 - [Package Overview](/reference)
